# data-engineering-zoomcamp

./: .gitignore  Makefile  dbt_project.yml  pyproject.toml
models/staging/: staging_green_data.sql
week_1_basics_n_setup/: home_work_1.sql  my_notes.md
week_1_basics_n_setup/1_terraform_gcp/: windows.md
week_1_basics_n_setup/2_docker_sql/: README.md  pg-test-connection.ipynb  upload-data.ipynb
week_3_data_warehouse/: homework_3.sql
week_3_data_warehouse/extras/: web_to_gcs.py
week_5_batch_processing/code/: 03_test.ipynb  04_pyspark.ipynb
