[tool.poetry]
name = "data-engineering-zoomcamp"
version = "0.1.0"
description = ""
authors = ["Camilo Ramirez <camiloramirezf@hotmail.com>"]
readme = "README.md"
packages = [{include = "data_engineering_zoomcamp"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
pandas = "^1.5.2"
sqlalchemy = "^1.4.46"
psycopg2-binary = "^2.9.5"
requests = "^2.28.2"
pyarrow = "^11.0.0"
google-cloud-storage = "^2.7.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
